--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Page</title>
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css"> <!-- if you have style.css -->
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>This is my first GitHub Pages website!</p>
+  <h1>Welcome to My Website</h1>
+  <p>This is the homepage.</p>
+
+  <img src="images/logo.png" alt="Logo"> <!-- if you have logo.png -->
+
+  <a href="about.html">Go to About Page</a> <!-- if you have about.html -->
+
+  <script src="script.js"></script> <!-- if you have script.js -->
 </body>
 </html>
