--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Website</title>
-  <link rel="stylesheet" href="style.css"> <!-- if you have style.css -->
+  <title>All My Files</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is the homepage.</p>
-
-  <img src="images/logo.png" alt="Logo"> <!-- if you have logo.png -->
-
-  <a href="about.html">Go to About Page</a> <!-- if you have about.html -->
-
-  <script src="script.js"></script> <!-- if you have script.js -->
+  <h1>List of Files</h1>
+  <ul>
+    <li><a href="file1.html">file1.html</a></li>
+    <li><a href="file2.html">file2.html</a></li>
+    <li><a href="docs/sample.pdf">sample.pdf</a></li>
+    <li><a href="images/photo.png">photo.png</a></li>
+    <li><a href="style.css">style.css</a></li>
+  </ul>
 </body>
 </html>
