--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
   <h1>List of Files</h1>
   <ul>
-    <li><a href="file1.html">file1.html</a></li>
-    <li><a href="file2.html">file2.html</a></li>
-    <li><a href="docs/sample.pdf">sample.pdf</a></li>
+    <li><a href=".devcontainer.html">file1.html</a></li>
+    <li><a href=".emergent.html">file2.html</a></li>
+    <li><a href="backend</a></li>
     <li><a href="images/photo.png">photo.png</a></li>
     <li><a href="style.css">style.css</a></li>
   </ul>
